--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -3,5 +3,5 @@ log4j.logger.overtime=DEBUG
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern=%-5p %c: %m%n
-# log4j.appender.console.layout.ConversionPattern=%-5p %m%n
+#log4j.appender.console.layout.ConversionPattern=%d{HH:mm:ss.SSS} %-5p %c: %m%n
+log4j.appender.console.layout.ConversionPattern=%d{HH:mm:ss.SSS} %-5p %m%n
